--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 		</nav>
 		</div>
 		<div class="logo2">
-			<a href="./home.html">
+			<a href="./index.html">
 			<h1>BLUE SHREW PRlNTS</h1>
 			</a>
 		</div>
