--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 <!-- NAV -->
 
 		<div class="logo">
-			<a href="./home.html">
+			<a href="./index.html">
 			<h1>BLUE SHREW PRlNTS</h1>
 			</a>
 		</div>
