--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- NAV -->
 
 		<div class="logo">
-			<a href="./home.html">
+			<a href="./index.html">
 			<h1>BLUE SHREW PRlNTS</h1>
 			</a>
 		</div>
@@ -35,7 +35,7 @@
 		</nav>
 		</div>
 		<div class="logo2">
-			<a href="./home.html">
+			<a href="./index.html">
 			<h1>BLUE SHREW PRlNTS</h1>
 			</a>
 		</div>
