--- a/wildlife.html
+++ b/wildlife.html
@@ -18,7 +18,7 @@
 <!-- NAV -->
 
 		<div class="logo">
-			<a href="./home.html">
+			<a href="./index.html">
 			<h1>BLUE SHREW PRlNTS</h1>
 			</a>
 		</div>
@@ -36,7 +36,7 @@
 		</nav>
 		</div>
 		<div class="logo2">
-			<a href="./home.html">
+			<a href="./index.html">
 			<h1>BLUE SHREW PRlNTS</h1>
 			</a>
 		</div>
