--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 	<title>Blue Shrew Prints</title>
 	<meta name="description" content="Linocut prints made by Andrea Raffai">
 	<meta name="keywords" content="linocut, prints, handmade, art, contemporary">
