--- a/folkart.html
+++ b/folkart.html
@@ -55,6 +55,38 @@
 	</header>
 
 	<section id="content">
+			<div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
+				<img src="IMG_3973.png"/>
+				<img src="IMG_3975.png"/>
+				<img src="IMG_3976.png"/>
+				<img src="IMG_3978.png"/>
+				<img src="IMG_3980.png"/>
+				<img src="IMG_3981.png"/>
+				<img src="IMG_3983.png"/>
+				<img src="IMG_3986.png"/>
+				<img src="IMG_3987.png"/>
+				<img src="IMG_3988.png"/>
+				<img src="IMG_3991.png"/>
+				<img src="IMG_3993.png"/>
+				<img src="IMG_3994.png"/>
+				<img src="IMG_3997.png"/>
+				<img src="IMG_3998.png"/>
+				<img src="IMG_3999.png"/>
+				<img src="IMG_4001.png"/>
+				<img src="IMG_4004.png"/>
+				<img src="IMG_4006.png"/>
+				<img src="IMG_4007.png"/>
+				<img src="IMG_4009.png"/>
+				<img src="IMG_4010.png"/>
+				<img src="IMG_4011.png"/>
+				<img src="IMG_4012.png"/>
+				<img src="IMG_4013.png"/>
+				<img src="IMG_4014.png"/>
+				<img src="IMG_4017.png"/>
+				<img src="IMG_4019.png"/>
+				<img src="IMG_4020.png"/>
+				<img src="IMG_4022.png"/>
+		        </div>
 
 			<h1 class="heading">
 				Folk art prints
