--- a/shop.html
+++ b/shop.html
@@ -68,7 +68,7 @@
 					
 					<div>
 
-					<img id="modImg1" src="./IMG/IMG_3973.png" alt="'Sunflowers' linocut print (A4/ 29.7x21cm / 8.3x11.7in)">
+					<img id="modImg1" src="./IMG/IMG_3973.jpg" alt="'Sunflowers' linocut print (A4/ 29.7x21cm / 8.3x11.7in)">
 
 					<p> 'SUNFLOWERS' </p>
 
@@ -76,7 +76,7 @@
 
 					<div>
 
-					<img id="modImg2" src="./IMG/IMG_4009.png" alt="'Jerboa' small relief print on japanese paper (A5/ 21x14.8 cm /8.3x5.8 in)">
+					<img id="modImg2" src="./IMG/IMG_4009.jpg" alt="'Jerboa' small relief print on japanese paper (A5/ 21x14.8 cm /8.3x5.8 in)">
 
 					<p> 'JERBOA' </p>
 
@@ -84,7 +84,7 @@
 
 					<div>
 
-					<img id="modImg3" src="./IMG/IMG_4017.png" loading="lazy" alt="'Lilies of Atlantis' linocut print on japanese paper (A3/ 42x29.7 cm / 11.7x16.5 in)">
+					<img id="modImg3" src="./IMG/IMG_4017.jpg" loading="lazy" alt="'Lilies of Atlantis' linocut print on japanese paper (A3/ 42x29.7 cm / 11.7x16.5 in)">
 
 					<p> 'LlLlES OF ATLANTlS' </p>
 
@@ -92,7 +92,7 @@
 
 					<div>
 
-					<img id="modImg4" src="./IMG/IMG_3975.png" loading="lazy" alt="'Jackalope' relief print (A4/ 29.7x21cm / 8.3x11.7in)">
+					<img id="modImg4" src="./IMG/IMG_3975.jpg" loading="lazy" alt="'Jackalope' relief print (A4/ 29.7x21cm / 8.3x11.7in)">
 
 					<p> 'JACKALOPE' </p>
 
@@ -100,7 +100,7 @@
 
 					<div>
 
-					<img id="modImg5" src="./IMG/IMG_3976.png" loading="lazy" alt="'Cat portrait' relief print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg5" src="./IMG/IMG_3976.jpg" loading="lazy" alt="'Cat portrait' relief print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'CAT PORTRAIT' </p>
 
@@ -108,7 +108,7 @@
 
 					<div>
 
-					<img id="modImg6" src="./IMG/IMG_3978.png" loading="lazy" alt="'Curiosity' linocut print on japanese paper (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg6" src="./IMG/IMG_3978.jpg" loading="lazy" alt="'Curiosity' linocut print on japanese paper (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'CURlOSITY' </p>
 
@@ -116,7 +116,7 @@
 
 					<div>
 
-					<img id="modImg7" src="./IMG/IMG_3981.png" loading="lazy" alt="'Botanical' linocut print on japanese paper (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg7" src="./IMG/IMG_3981.jpg" loading="lazy" alt="'Botanical' linocut print on japanese paper (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'BOTANlCAL' </p>
 
@@ -124,7 +124,7 @@
 
 					<div>
 
-					<img id="modImg8" src="./IMG/IMG_3983.png" loading="lazy" alt="'The Black Cat' relief print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg8" src="./IMG/IMG_3983.jpg" loading="lazy" alt="'The Black Cat' relief print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'THE BLACK CAT' </p>
 
@@ -132,7 +132,7 @@
 
 					<div>
 
-					<img id="modImg9" src="./IMG/IMG_3986.png" loading="lazy" alt="'Where the flower grows...' lino print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg9" src="./IMG/IMG_3986.jpg" loading="lazy" alt="'Where the flower grows...' lino print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'WHERE THE FLOWER GROWS...' </p>
 
@@ -140,7 +140,7 @@
 
 					<div>
 
-					<img id="modImg10" src="./IMG/IMG_3987.png" loading="lazy" alt="'Stolen scent' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg10" src="./IMG/IMG_3987.jpg" loading="lazy" alt="'Stolen scent' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'STOLEN SCENT' </p>
 
@@ -148,7 +148,7 @@
 
 					<div>
 
-					<img id="modImg11" src="./IMG/IMG_3988.png" loading="lazy" alt="'The Tale of the Serpent' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg11" src="./IMG/IMG_3988.jpg" loading="lazy" alt="'The Tale of the Serpent' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'THE TALE OF THE SERPENT' </p>
 
@@ -156,7 +156,7 @@
 
 					<div>
 
-					<img id="modImg12" src="./IMG/IMG_3991.png" loading="lazy" alt="'Grow' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg12" src="./IMG/IMG_3991.jpg" loading="lazy" alt="'Grow' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'GROW' </p>
 
@@ -164,7 +164,7 @@
 
 					<div>
 
-					<img id="modImg13" src="./IMG/IMG_3993.png" loading="lazy" alt="'Winter dreams' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg13" src="./IMG/IMG_3993.jpg" loading="lazy" alt="'Winter dreams' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'WlNTER DREAMS' </p>
 
@@ -172,7 +172,7 @@
 
 					<div>
 
-					<img id="modImg15" src="./IMG/IMG_3997.png" loading="lazy" alt="'Call of the Sun' linocut print (29x15 cm / 11.5x5.9 in)">
+					<img id="modImg15" src="./IMG/IMG_3997.jpg" loading="lazy" alt="'Call of the Sun' linocut print (29x15 cm / 11.5x5.9 in)">
 
 					<p> 'CALL OF THE SUN' </p>
 
@@ -180,7 +180,7 @@
 
 					<div>
 
-					<img id="modImg16" src="./IMG/IMG_3998.png" loading="lazy" alt="'Cornflower' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg16" src="./IMG/IMG_3998.jpg" loading="lazy" alt="'Cornflower' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'CORNFLOWER' </p>
 
@@ -188,7 +188,7 @@
 
 					<div>
 
-					<img id="modImg17" src="./IMG/IMG_3999.png" loading="lazy" alt="'Florescene' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg17" src="./IMG/IMG_3999.jpg" loading="lazy" alt="'Florescene' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'FLORESCENE' </p>
 
@@ -196,7 +196,7 @@
 
 					<div>
 
-					<img id="modImg20" src="./IMG/IMG_4007.png" loading="lazy" alt="'Hideout' linocut print (A5/ 21x14.8 cm /8.3x5.8 in)">
+					<img id="modImg20" src="./IMG/IMG_4007.jpg" loading="lazy" alt="'Hideout' linocut print (A5/ 21x14.8 cm /8.3x5.8 in)">
 
 					<p> 'HIDEOUT' </p>
 
@@ -204,7 +204,7 @@
 
 					<div>
 
-					<img id="modImg22" src="./IMG/IMG_4011.png" loading="lazy" alt="'Folk art' linocut print (A5 / 21 x 14.8 cm /8.3 x 5.8 in)">
+					<img id="modImg22" src="./IMG/IMG_4011.jpg" loading="lazy" alt="'Folk art' linocut print (A5 / 21 x 14.8 cm /8.3 x 5.8 in)">
 
 					<p> 'FOLK ART' </p>
 
@@ -212,7 +212,7 @@
 
 					<div>
 
-					<img id="modImg24" src="./IMG/IMG_4013.png" loading="lazy" alt="'Peony' linocut print (A5 / 21x14.8 cm /8.3x5.8 in)">
+					<img id="modImg24" src="./IMG/IMG_4013.jpg" loading="lazy" alt="'Peony' linocut print (A5 / 21x14.8 cm /8.3x5.8 in)">
 
 					<p> 'PEONY' </p>
 
@@ -220,7 +220,7 @@
 
 					<div>
 
-					<img id="modImg26" src="./IMG/IMG_4019.png" loading="lazy" alt="'Rose Garden' linocut print (A3/ 42x29.7 cm / 11-3/4 x 16-1/2 in)">
+					<img id="modImg26" src="./IMG/IMG_4019.jpg" loading="lazy" alt="'Rose Garden' linocut print (A3/ 42x29.7 cm / 11-3/4 x 16-1/2 in)">
 
 					<p> 'ROSE GARDEN' </p>
 
@@ -228,7 +228,7 @@
 
 					<div>
 
-					<img id="modImg28" src="./IMG/IMG_4022.png" loading="lazy" alt="'Song of the Night' linocut print (A3/ 42x29.7 cm / 11-3/4 x 16-1/2 in)">
+					<img id="modImg28" src="./IMG/IMG_4022.jpg" loading="lazy" alt="'Song of the Night' linocut print (A3/ 42x29.7 cm / 11-3/4 x 16-1/2 in)">
 
 					<p> 'SONG OF THE NIGHT' </p>
 
@@ -242,17 +242,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img id="modImg01" src="./IMG/IMG_3973.png" alt="'Sunflowers' linocut print (A4/ 29.7x21cm / 8.3x11.7in)">
+					<img id="modImg01" src="./IMG/IMG_3973.jpg" alt="'Sunflowers' linocut print (A4/ 29.7x21cm / 8.3x11.7in)">
 
 					<p> 'SUNFLOWERS' </p>
 				</div>
 				<div class="category">
-					<img id="modImg02" src="./IMG/IMG_4009.png" alt="'Jerboa' small relief print on japanese paper (A5/ 21x14.8 cm /8.3x5.8 in)">
+					<img id="modImg02" src="./IMG/IMG_4009.jpg" alt="'Jerboa' small relief print on japanese paper (A5/ 21x14.8 cm /8.3x5.8 in)">
 
 					<p> 'JERBOA' </p>
 				</div>
 				<div class="category">
-					<img id="modImg03" src="./IMG/IMG_4017.png" alt="'Lilies of Atlantis' linocut print on japanese paper (A3/ 42x29.7 cm / 11.7x16.5 in)">
+					<img id="modImg03" src="./IMG/IMG_4017.jpg" alt="'Lilies of Atlantis' linocut print on japanese paper (A3/ 42x29.7 cm / 11.7x16.5 in)">
 
 					<p> 'LlLlES OF ATLANTlS' </p>
 				</div>
@@ -262,17 +262,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img id="modImg04" src="./IMG/IMG_3975.png" loading="lazy" alt="'Jackalope' relief print (A4/ 29.7x21cm / 8.3x11.7in)">
+					<img id="modImg04" src="./IMG/IMG_3975.jpg" loading="lazy" alt="'Jackalope' relief print (A4/ 29.7x21cm / 8.3x11.7in)">
 
 					<p> 'JACKALOPE' </p>
 				</div>
 				<div class="category">
-					<img id="modImg05" src="./IMG/IMG_3976.png" loading="lazy" alt="'Cat portrait' relief print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg05" src="./IMG/IMG_3976.jpg" loading="lazy" alt="'Cat portrait' relief print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'CAT PORTRAIT' </p>
 				</div>
 				<div class="category">
-					<img id="modImg06" src="./IMG/IMG_3978.png" loading="lazy" alt="'Curiosity' linocut print on japanese paper (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg06" src="./IMG/IMG_3978.jpg" loading="lazy" alt="'Curiosity' linocut print on japanese paper (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'CURlOSITY' </p>
 				</div>
@@ -282,17 +282,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img id="modImg07" src="./IMG/IMG_3981.png" loading="lazy" alt="'Botanical' linocut print on japanese paper (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg07" src="./IMG/IMG_3981.jpg" loading="lazy" alt="'Botanical' linocut print on japanese paper (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'BOTANlCAL' </p>
 				</div>
 				<div class="category">
-					<img id="modImg08" src="./IMG/IMG_3983.png" loading="lazy" alt="'The Black Cat' relief print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg08" src="./IMG/IMG_3983.jpg" loading="lazy" alt="'The Black Cat' relief print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'THE BLACK CAT' </p>
 				</div>
 				<div class="category">
-					<img id="modImg09" src="./IMG/IMG_3986.png" loading="lazy" alt="'Where the flower grows...' lino print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg09" src="./IMG/IMG_3986.jpg" loading="lazy" alt="'Where the flower grows...' lino print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'WHERE THE FLOWER GROWS...' </p>
 				</div>
@@ -302,17 +302,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img id="modImg010" src="./IMG/IMG_3987.png" loading="lazy" alt="'Stolen scent' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg010" src="./IMG/IMG_3987.jpg" loading="lazy" alt="'Stolen scent' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'STOLEN SCENT' </p>
 				</div>
 				<div class="category">
-					<img id="modImg011" src="./IMG/IMG_3988.png" loading="lazy" alt="'The Tale of the Serpent' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg011" src="./IMG/IMG_3988.jpg" loading="lazy" alt="'The Tale of the Serpent' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'THE TALE OF THE SERPENT' </p>
 				</div>
 				<div class="category">
-					<img id="modImg012" src="./IMG/IMG_3991.png" loading="lazy" alt="'Grow' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg012" src="./IMG/IMG_3991.jpg" loading="lazy" alt="'Grow' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'GROW' </p>
 				</div>
@@ -322,17 +322,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img id="modImg013" src="./IMG/IMG_3993.png" loading="lazy" alt="'Winter dreams' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg013" src="./IMG/IMG_3993.jpg" loading="lazy" alt="'Winter dreams' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'WlNTER DREAMS' </p>
 				</div>
 				<div class="category">
-					<img id="modImg015" src="./IMG/IMG_3997.png" loading="lazy" alt="'Call of the Sun' linocut print (29x15 cm / 11.5x5.9 in)">
+					<img id="modImg015" src="./IMG/IMG_3997.jpg" loading="lazy" alt="'Call of the Sun' linocut print (29x15 cm / 11.5x5.9 in)">
 
 					<p> 'CALL OF THE SUN' </p>
 				</div>
 				<div class="category">
-					<img id="modImg016" src="./IMG/IMG_3998.png" loading="lazy" alt="'Cornflower' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg016" src="./IMG/IMG_3998.jpg" loading="lazy" alt="'Cornflower' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'CORNFLOWER' </p>
 				</div>
@@ -342,19 +342,19 @@
 			<div class="categories">
 
 				<div class="category">
-					<img id="modImg017" src="./IMG/IMG_3999.png" loading="lazy" alt="'Florescene' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
+					<img id="modImg017" src="./IMG/IMG_3999.jpg" loading="lazy" alt="'Florescene' linocut print (A4/ 29.7x21 cm /11.7x8.3 in)">
 
 					<p> 'FLORESCENE' </p>
 				</div>
 
 				<div class="category">
-					<img id="modImg020" src="./IMG/IMG_4007.png" loading="lazy" alt="'Hideout' linocut print (A5/ 21x14.8 cm /8.3x5.8 in)">
+					<img id="modImg020" src="./IMG/IMG_4007.jpg" loading="lazy" alt="'Hideout' linocut print (A5/ 21x14.8 cm /8.3x5.8 in)">
 
 					<p> 'HIDEOUT' </p>
 				</div>
 
 				<div class="category">
-					<img id="modImg022" src="./IMG/IMG_4011.png" loading="lazy" alt="'Folk art' linocut print (A5 / 21 x 14.8 cm /8.3 x 5.8 in)">
+					<img id="modImg022" src="./IMG/IMG_4011.jpg" loading="lazy" alt="'Folk art' linocut print (A5 / 21 x 14.8 cm /8.3 x 5.8 in)">
 
 					<p> 'FOLK ART' </p>
 				</div>
@@ -364,19 +364,19 @@
 			<div class="categories">
 
 				<div class="category">
-					<img id="modImg024" src="./IMG/IMG_4013.png" loading="lazy" alt="'Peony' linocut print (A5 / 21x14.8 cm /8.3x5.8 in)">
+					<img id="modImg024" src="./IMG/IMG_4013.jpg" loading="lazy" alt="'Peony' linocut print (A5 / 21x14.8 cm /8.3x5.8 in)">
 
 					<p> 'PEONY' </p>
 				</div>
 
 				<div class="category">
-					<img id="modImg026" src="./IMG/IMG_4019.png" loading="lazy" alt="'Rose Garden' linocut print (A3/ 42x29.7 cm / 11-3/4 x 16-1/2 in)">
+					<img id="modImg026" src="./IMG/IMG_4019.jpg" loading="lazy" alt="'Rose Garden' linocut print (A3/ 42x29.7 cm / 11-3/4 x 16-1/2 in)">
 
 					<p> 'ROSE GARDEN' </p>
 				</div>
 
 				<div class="category">
-					<img id="modImg028" src="./IMG/IMG_4022.png" loading="lazy" alt="'Song of the Night' linocut print (A3/ 42x29.7 cm / 11-3/4 x 16-1/2 in)">
+					<img id="modImg028" src="./IMG/IMG_4022.jpg" loading="lazy" alt="'Song of the Night' linocut print (A3/ 42x29.7 cm / 11-3/4 x 16-1/2 in)">
 
 					<p> 'SONG OF THE NIGHT' </p>
 				</div>
