--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
 				
 					<div id="cat1" class="show">
 
-					<img src="./IMG/IMG_4001.png">
+					<img src="./IMG/IMG_4001.jpg">
 					<a href="./portfolio.html"><p> MORE </p>
 					</a>
 
@@ -161,7 +161,7 @@
 
 					<div id="cat2" class="hidden">
 
-					<img src="./IMG/IMG_4009.png">
+					<img src="./IMG/IMG_4009.jpg">
 
 					<a href="./portfolio.html"><p> MORE </p>
 					</a>
@@ -170,7 +170,7 @@
 
 					<div id="cat3" class="hidden">
 
-					<img src="./IMG/IMG_4017.png">
+					<img src="./IMG/IMG_4017.jpg">
 
 					<a href="./portfolio.html"><p> MORE </p>
 					</a>
