--- a/botanical.html
+++ b/botanical.html
@@ -68,7 +68,7 @@
 					
 					<div>
 
-					<img src="./IMG/IMG_3997.png" alt="'Call of the Sun' linocut print">
+					<img src="./IMG/IMG_3997.jpg" alt="'Call of the Sun' linocut print">
 
 					<p> 'CALL OF THE SUN' </p>
 
@@ -76,7 +76,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4012.png" alt="'Mushrooms' linocut print">
+					<img src="./IMG/IMG_4012.jpg" alt="'Mushrooms' linocut print">
 
 					<p> 'MUSHROOMS' </p>
 
@@ -84,7 +84,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4013.png" alt="'Peony' linocut print">
+					<img src="./IMG/IMG_4013.jpg" alt="'Peony' linocut print">
 
 					<p> 'PEONY' </p>
 
@@ -92,7 +92,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4014.png" alt="'Morning peace' linocut print">
+					<img src="./IMG/IMG_4014.jpg" alt="'Morning peace' linocut print">
 
 					<p> 'MORNING PEACE' </p>
 
@@ -100,7 +100,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4019.png" alt="'Rose Garden' linocut print">
+					<img src="./IMG/IMG_4019.jpg" alt="'Rose Garden' linocut print">
 
 					<p> 'ROSE GARDEN' </p>
 
@@ -108,7 +108,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3973.png" alt="'Sunflowers' linocut print">
+					<img src="./IMG/IMG_3973.jpg" alt="'Sunflowers' linocut print">
 
 					<p> 'SUNFLOWERS' </p>
 
@@ -116,7 +116,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3981.png" alt="'Botanical 01' linocut print">
+					<img src="./IMG/IMG_3981.jpg" alt="'Botanical 01' linocut print">
 
 					<p> 'BOTANlCAL 01' </p>
 
@@ -131,15 +131,15 @@
 			<div class="categories">
 
 				<div class="category">
-					<img src="./IMG/IMG_3997.png" alt="'Call of the Sun' linocut print">
+					<img src="./IMG/IMG_3997.jpg" alt="'Call of the Sun' linocut print">
 					<p> 'CALL OF THE SUN' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_4012.png" alt="'Mushrooms' linocut print">
+					<img src="./IMG/IMG_4012.jpg" alt="'Mushrooms' linocut print">
 					<p> 'MUSHROOMS' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_4013.png" alt="'Peony' linocut print">
+					<img src="./IMG/IMG_4013.jpg" alt="'Peony' linocut print">
 
 					<p> 'PEONY' </p>
 				</div>
@@ -149,17 +149,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img src="./IMG/IMG_4014.png" alt="'Morning peace' linocut print">
+					<img src="./IMG/IMG_4014.jpg" alt="'Morning peace' linocut print">
 
 					<p> 'MORNING PEACE' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_4019.png" alt="'Rose Garden' linocut print">
+					<img src="./IMG/IMG_4019.jpg" alt="'Rose Garden' linocut print">
 
 					<p> 'ROSE GARDEN' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_3973.png" alt="'Sunflowers' linocut print">
+					<img src="./IMG/IMG_3973.jpg" alt="'Sunflowers' linocut print">
 
 					<p> 'SUNFLOWERS' </p>
 				</div>
@@ -169,7 +169,7 @@
 			<div class="categories">
 
 				<div class="category">
-					<img src="./IMG/IMG_3981.png" alt="'Botanical 01' linocut print">
+					<img src="./IMG/IMG_3981.jpg" alt="'Botanical 01' linocut print">
 
 					<p> 'BOTANlCAL 01' </p>
 				</div>
