--- a/folkart.html
+++ b/folkart.html
@@ -68,7 +68,7 @@
 					
 					<div>
 
-					<img src="./IMG/IMG_3975.png" alt="'Jackalope' linocut print">
+					<img src="./IMG/IMG_3975.jpg" alt="'Jackalope' linocut print">
 
 					<p> 'JACKALOPE' </p>
 
@@ -76,7 +76,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3994.png" alt="'Flora' linocut print">
+					<img src="./IMG/IMG_3994.jpg" alt="'Flora' linocut print">
 
 					<p> 'FLORA' </p>
 
@@ -84,7 +84,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3998.png" alt="'Cornflower' linocut print">
+					<img src="./IMG/IMG_3998.jpg" alt="'Cornflower' linocut print">
 
 					<p> 'CORNFLOWER' </p>
 
@@ -92,7 +92,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3999.png" alt="'Florescene' linocut print">
+					<img src="./IMG/IMG_3999.jpg" alt="'Florescene' linocut print">
 
 					<p> 'FLORESCENE' </p>
 
@@ -100,7 +100,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4004.png" alt="'Skeleton key' linocut print">
+					<img src="./IMG/IMG_4004.jpg" alt="'Skeleton key' linocut print">
 
 					<p> 'SKELETON KEY' </p>
 
@@ -108,7 +108,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4011.png" alt="'Hungarian folk art' linocut print">
+					<img src="./IMG/IMG_4011.jpg" alt="'Hungarian folk art' linocut print">
 
 					<p> 'HUNGARlAN FOLK ART' </p>
 
@@ -123,17 +123,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img src="./IMG/IMG_3975.png" alt="'Jackalope' linocut print">
+					<img src="./IMG/IMG_3975.jpg" alt="'Jackalope' linocut print">
 
 					<p> 'JACKALOPE' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_3994.png" alt="'Flora' linocut print">
+					<img src="./IMG/IMG_3994.jpg" alt="'Flora' linocut print">
 
 					<p> 'FLORA' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_3998.png" alt="'Cornflower' linocut print">
+					<img src="./IMG/IMG_3998.jpg" alt="'Cornflower' linocut print">
 
 					<p> 'CORNFLOWER' </p>
 				</div>
@@ -143,17 +143,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img src="./IMG/IMG_3999.png" alt="'Florescene' linocut print">
+					<img src="./IMG/IMG_3999.jpg" alt="'Florescene' linocut print">
 
 					<p> 'FLORESCENE' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_4004.png" alt="'Skeleton key' linocut print">
+					<img src="./IMG/IMG_4004.jpg" alt="'Skeleton key' linocut print">
 
 					<p> 'SKELETON KEY' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_4011.png" alt="'Hungarian folk art' linocut print">
+					<img src="./IMG/IMG_4011.jpg" alt="'Hungarian folk art' linocut print">
 
 					<p> 'HUNGARlAN FOLK ART' </p>
 				</div>
