--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@
 			
 				<div id="cat1" class="show">
 
-				<a href="./botanical.html"><img src="./IMG/IMG_4019.png">
+				<a href="./botanical.html"><img src="./IMG/IMG_4019.jpg">
 				</a>
 
 				<a href=./botanical.html><p> BOTANlCAL </p>
@@ -121,7 +121,7 @@
 
 				<div id="cat2" class="hidden">
 
-				<a href="./wildlife.html"><img src="./IMG/IMG_3987.png">
+				<a href="./wildlife.html"><img src="./IMG/IMG_3987.jpg">
 				</a>
 
 				<a href="./wildlife.html"><p> WlLDLlFE </p>
@@ -131,7 +131,7 @@
 
 				<div id="cat3" class="hidden">
 
-				<a href="./folkart.html"><img src="./IMG/IMG_4004.png">
+				<a href="./folkart.html"><img src="./IMG/IMG_4004.jpg">
 				</a>
 
 				<a href="./folkart.html"><p> FOLK ART </p>
@@ -147,19 +147,19 @@
 
 				<div class="category">
 					<a href="./botanical.html">
-					<img src="./IMG/IMG_4019.png" alt="">
+					<img src="./IMG/IMG_4019.jpg" alt="">
 					<p> BOTANlCAL </p>
 					</a>
 				</div>
 				<div class="category">
 					<a href="./wildlife.html">
-					<img src="./IMG/IMG_3987.png" alt="">
+					<img src="./IMG/IMG_3987.jpg" alt="">
 					<p> WlLDLlFE </p>
 					</a>
 				</div>
 				<div class="category">
 					<a href="./folkart.html">
-					<img src="./IMG/IMG_4004.png" alt="">
+					<img src="./IMG/IMG_4004.jpg" alt="">
 					<p> FOLK ART </p>
 					</a>
 				</div>
