--- a/wildlife.html
+++ b/wildlife.html
@@ -68,7 +68,7 @@
 					
 					<div>
 
-					<img src="./IMG/IMG_3978.png" alt="'Curiosity' linocut print">
+					<img src="./IMG/IMG_3978.jpg" alt="'Curiosity' linocut print">
 
 					<p> 'CURlOSlTY' </p>
 
@@ -76,7 +76,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3983.png" alt="'The Black Cat' linocut print">
+					<img src="./IMG/IMG_3983.jpg" alt="'The Black Cat' linocut print">
 
 					<p> 'THE BLACK CAT' </p>
 
@@ -84,7 +84,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3987.png" alt="'Stolen scent' linocut print">
+					<img src="./IMG/IMG_3987.jpg" alt="'Stolen scent' linocut print">
 
 					<p> 'STOLEN SCENT' </p>
 
@@ -92,7 +92,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3988.png" alt="'The Tale of the Serpent' linocut print">
+					<img src="./IMG/IMG_3988.jpg" alt="'The Tale of the Serpent' linocut print">
 
 					<p> 'THE TALE OF THE SERPENT' </p>
 
@@ -100,7 +100,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3993.png" alt="'Winter Dreams' linocut print">
+					<img src="./IMG/IMG_3993.jpg" alt="'Winter Dreams' linocut print">
 
 					<p> 'WlNTER DREAMS' </p>
 
@@ -108,7 +108,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3980.png" alt="'Bobcat skull study' linocut print">
+					<img src="./IMG/IMG_3980.jpg" alt="'Bobcat skull study' linocut print">
 
 					<p> 'BOBCAT SKULL STUDY' </p>
 
@@ -116,7 +116,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3986.png" alt="'Where the flower grows...' linocut print">
+					<img src="./IMG/IMG_3986.jpg" alt="'Where the flower grows...' linocut print">
 
 					<p> 'WHERE THE FLOWER GROWS...' </p>
 
@@ -124,7 +124,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4001.png" alt="'Under the Moon' linocut print">
+					<img src="./IMG/IMG_4001.jpg" alt="'Under the Moon' linocut print">
 
 					<p> 'UNDER THE MOON' </p>
 
@@ -132,7 +132,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4006.png" alt="'Blue bunny' linocut print">
+					<img src="./IMG/IMG_4006.jpg" alt="'Blue bunny' linocut print">
 
 					<p> 'BLUE BUNNY' </p>
 
@@ -140,7 +140,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4007.png" alt="'Hideout' linocut print">
+					<img src="./IMG/IMG_4007.jpg" alt="'Hideout' linocut print">
 
 					<p> 'HlDEOUT' </p>
 
@@ -148,7 +148,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4009.png" alt="'Jerboa' linocut print">
+					<img src="./IMG/IMG_4009.jpg" alt="'Jerboa' linocut print">
 
 					<p> 'JERBOA' </p>
 
@@ -156,7 +156,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4010.png" alt="'Moonmoth' linocut print">
+					<img src="./IMG/IMG_4010.jpg" alt="'Moonmoth' linocut print">
 
 					<p> 'MOONMOTH' </p>
 
@@ -164,7 +164,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4017.png" alt="'Lilies of Atlantis' linocut print">
+					<img src="./IMG/IMG_4017.jpg" alt="'Lilies of Atlantis' linocut print">
 
 					<p> 'LlLlES OF ATLANTlS' </p>
 
@@ -172,7 +172,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4020.png" alt="'Make a wish' linocut print">
+					<img src="./IMG/IMG_4020.jpg" alt="'Make a wish' linocut print">
 
 					<p> 'MAKE A WlSH' </p>
 
@@ -180,7 +180,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_4022.png" alt="'Song of the Night' linocut print">
+					<img src="./IMG/IMG_4022.jpg" alt="'Song of the Night' linocut print">
 
 					<p> 'SONG OF THE NlGHT' </p>
 
@@ -188,7 +188,7 @@
 
 					<div>
 
-					<img src="./IMG/IMG_3976.png" alt="'Cat portrait' linocut print">
+					<img src="./IMG/IMG_3976.jpg" alt="'Cat portrait' linocut print">
 
 					<p> 'CAT PORTRAlT' </p>
 
@@ -203,17 +203,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img src="./IMG/IMG_3978.png" alt="'Curiosity' linocut print">
+					<img src="./IMG/IMG_3978.jpg" alt="'Curiosity' linocut print">
 
 					<p> 'CURlOSlTY' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_3983.png" alt="'The Black Cat' linocut print">
+					<img src="./IMG/IMG_3983.jpg" alt="'The Black Cat' linocut print">
 
 					<p> 'THE BLACK CAT' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_3987.png" alt="'Stolen scent' linocut print">
+					<img src="./IMG/IMG_3987.jpg" alt="'Stolen scent' linocut print">
 
 					<p> 'STOLEN SCENT' </p>
 				</div>
@@ -223,17 +223,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img src="./IMG/IMG_3988.png" alt="'The Tale of the Serpent' linocut print">
+					<img src="./IMG/IMG_3988.jpg" alt="'The Tale of the Serpent' linocut print">
 
 					<p> 'THE TALE OF THE SERPENT' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_3993.png" alt="'Winter Dreams' linocut print">
+					<img src="./IMG/IMG_3993.jpg" alt="'Winter Dreams' linocut print">
 
 					<p> 'WlNTER DREAMS' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_3980.png" alt="'Bobcat skull study' linocut print">
+					<img src="./IMG/IMG_3980.jpg" alt="'Bobcat skull study' linocut print">
 
 					<p> 'BOBCAT SKULL STUDY' </p>
 				</div>
@@ -243,17 +243,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img src="./IMG/IMG_3986.png" alt="'Where the flower grows...' linocut print">
+					<img src="./IMG/IMG_3986.jpg" alt="'Where the flower grows...' linocut print">
 
 					<p> 'WHERE THE FLOWER GROWS...' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_4001.png" alt="'Under the Moon' linocut print">
+					<img src="./IMG/IMG_4001.jpg" alt="'Under the Moon' linocut print">
 
 					<p> 'UNDER THE MOON' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_4006.png" alt="'Blue bunny' linocut print">
+					<img src="./IMG/IMG_4006.jpg" alt="'Blue bunny' linocut print">
 
 					<p> 'BLUE BUNNY' </p>
 				</div>
@@ -263,17 +263,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img src="./IMG/IMG_4007.png" alt="'Hideout' linocut print">
+					<img src="./IMG/IMG_4007.jpg" alt="'Hideout' linocut print">
 
 					<p> 'HlDEOUT' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_4009.png" alt="'Jerboa' linocut print">
+					<img src="./IMG/IMG_4009.jpg" alt="'Jerboa' linocut print">
 
 					<p> 'JERBOA' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_4010.png" alt="'Moonmoth' linocut print">
+					<img src="./IMG/IMG_4010.jpg" alt="'Moonmoth' linocut print">
 
 					<p> 'MOONMOTH' </p>
 				</div>
@@ -283,17 +283,17 @@
 			<div class="categories">
 
 				<div class="category">
-					<img src="./IMG/IMG_4017.png" alt="'Lilies of Atlantis' linocut print">
+					<img src="./IMG/IMG_4017.jpg" alt="'Lilies of Atlantis' linocut print">
 
 					<p> 'LlLlES OF ATLANTlS' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_4020.png" alt="'Make a wish' linocut print">
+					<img src="./IMG/IMG_4020.jpg" alt="'Make a wish' linocut print">
 
 					<p> 'MAKE A WlSH' </p>
 				</div>
 				<div class="category">
-					<img src="./IMG/IMG_4022.png" alt="'Song of the Night' linocut print">
+					<img src="./IMG/IMG_4022.jpg" alt="'Song of the Night' linocut print">
 
 					<p> 'SONG OF THE NlGHT' </p>
 				</div>
@@ -303,7 +303,7 @@
 			<div class="categories">
 
 				<div class="category">
-					<img src="./IMG/IMG_3976.png" alt="'Cat portrait' linocut print">
+					<img src="./IMG/IMG_3976.jpg" alt="'Cat portrait' linocut print">
 
 					<p> 'CAT PORTRAlT' </p>
 				</div>
