--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 	<title>Blue Shrew Prints</title>
 	<meta name="description" content="Linocut prints made by Andrea Raffai">
 	<meta name="keywords" content="linocut, prints, handmade, art, contemporary">
+	<link rel="favicon" type="image/png" href="./IMG/favicon-16x16.png">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
